Adding some initial indexer code
* IndexConf/IndexConfBuilder: the parsed representation of the index configuration
* Indexer: the indexing algorithm, which works based on the IndexConf and calls the hbase-to-solr mapper
* HBaseSearch: main entry point of the indexing process

Doesn't do much useful yet, next step is to make the indexing algorithm more real.