@@ -71,11 +71,22 @@
       <artifactId>solr-solrj</artifactId>
       <version>${version.solr}</version>
     </dependency>
-
     <dependency>
       <groupId>org.apache.solr</groupId>
       <artifactId>solr-core</artifactId>
       <version>${version.solr}</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.8.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>1.9.5</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
@@ -158,11 +169,6 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.9</version>
-          <configuration>
-            <forkMode>always</forkMode>
-            <argLine>-Xmx1000m -XX:MaxPermSize=128m ${argLine}</argLine>
-          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
